feat: reorganize intro website

--- a/projects/intro/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
+++ b/projects/intro/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
@@ -17,23 +17,33 @@
       <div class="col-lg-4" *ngFor="let advisor of advisors">
         <div class="pt-sm-4 pb-4 pr-3 pl-3">
           <div class="row">
-            <div class="col-5 col-sm-6 text-right">
+            <div class="col-4 col-sm-5 text-right">
               <div class="testimonial-client-img text-center pt-3 mb-3">
-                <img [src]="'assets/intro-img/advisors/' + advisor.imagePath" class="img-fluid rounded-circle img-thumbnail" width="130" height="130">
+                <img [src]="'assets/intro-img/advisors/' + advisor.imagePath" class="img-fluid rounded-circle img-thumbnail">
               </div>
             </div>
-            <div class="col-7 col-sm-6 pt-5 pl-3">
+            <div class="col-8 col-sm-7 pt-4 pl-3">
               <h6 class="mb-0">
                 {{advisor.i18nName[currentLang]}}
+
+                <ng-container *ngIf="advisor.profile?.linkedin">
+                  <a class="fab fa-linkedin profile-link" [href]="advisor.profile.linkedin"></a>
+                </ng-container>
+                <ng-container *ngIf="advisor.profile?.crunchbase">
+                  <a class="fa fa-link profile-link small" [href]="advisor.profile.crunchbase"></a>
+                </ng-container>
+                <ng-container *ngIf="advisor.profile?.bloomberg">
+                  <a class="fa fa-link profile-link small" [href]="advisor.profile.bloomberg"></a>
+                </ng-container>
               </h6>
               <div class="position mt-2">{{advisor.i18nPosition[currentLang]}}</div>
             </div>
           </div>
-          <ul class="pt-3 text-muted small">
-            <li class="mt-2" *ngFor="let sentence of advisor.i18nSentences[currentLang]; let i =index;">
-              {{sentence}}
-            </li>
-          </ul>
+          <!--<ul class="pt-3 text-muted small">-->
+            <!--<li class="mt-2" *ngFor="let sentence of advisor.i18nSentences[currentLang]; let i =index;">-->
+              <!--{{sentence}}-->
+            <!--</li>-->
+          <!--</ul>-->
         </div>
       </div>
 
