--- a/projects/intro/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/intro/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -29,21 +29,32 @@
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mt-sm-0 mt-3 ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#press">{{'intro-navbar.press' | translate}}</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#ecosystem">{{'intro-navbar.ecosystem' | translate}}</a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="#mzk-coins">{{'intro-navbar.mzk-coins' | translate}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#leadership-team">{{'intro-navbar.team' | translate}}</a>
+          <a class="nav-link" routerLink="/airdrop-event" target="_blank">{{'intro-navbar.bounty' | translate}}</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#investor">{{'intro-navbar.partners' | translate}}</a>
+          <a class="nav-link" href="#the-challenge">{{'intro-navbar.business' | translate}}</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#ecosystem">{{'intro-navbar.ecosystem' | translate}}</a>
+        </li>
+
+        <!--
+        <li class="nav-item active">
+          <a class="nav-link" href="#token-metrics">{{'intro-navbar.token-metrics' | translate}}</a>
+        </li>
+        -->
+
+        <!--
+        <li class="nav-item">
+          <a class="nav-link" href="#mzk-coins">{{'intro-navbar.mzk-coins' | translate}}</a>
+        </li>
+        -->
+
+        <li class="nav-item">
+          <a class="nav-link" href="#leadership-team">{{'intro-navbar.team' | translate}}</a>
         </li>
 
         <li class="nav-item">
@@ -51,11 +62,22 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#roadmap">{{'intro-navbar.roadmap' | translate}}</a>
+          <a class="nav-link" href="#investor">{{'intro-navbar.partners' | translate}}</a>
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" href="#roadmap">{{'intro-navbar.roadmap' | translate}}</a>
+        </li>
+
+
+        <!--
+        <li class="nav-item">
           <a class="nav-link" routerLink="/beta">{{'intro-navbar.services' | translate}}</a>
+        </li>
+        -->
+
+        <li class="nav-item">
+          <a class="nav-link" href="#press">{{'intro-navbar.press' | translate}}</a>
         </li>
 
         <li class="nav-item" dropdown>
