--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -13,6 +13,8 @@
               {{'intro-main.home-subtitle-1' | translate}} <BR/>
               {{'intro-main.home-subtitle-2' | translate}}
             </p>
+
+            <!--
             <div class="home-btn">
               <a class="mr-2 mr-sm-3">{{'intro-main.project-teaser' | translate}}</a>
               <a href="assets/mzk-teaser-en.pdf" target="_blank" class="btn btn-custom mr-3">English</a>
@@ -23,11 +25,12 @@
               <a class="mr-2 mr-sm-3">{{'intro-main.whitepaper' | translate}}</a>
               <a href="assets/mzk-whitepaper-en.pdf" target="_blank" class="btn btn-custom mr-1 mr-sm-3">English</a>
             </div>
+            -->
 
             <div class="home-btn mt-4 mt-sm-5" id="muzika-studio-program">
               <h5>
                 Muzika Studio
-                <small>v0.0.9 (2018.07.23)</small>
+                <small>v0.1.0 (2018.09.20)</small>
               </h5>
               <div class="mr-3 mr-sm-3 mb-3">
                 <span class="fa-stack fa-2x">
@@ -66,6 +69,7 @@
               <!--allowfullscreen></iframe>-->
             </div>
 
+            <!--
             <div class="airdrop-btn mt-3 text-right">
               <a routerLink="/airdrop-event" class="btn btn-custom">
                 {{'intro-main.airdrop-btn-text' | translate}}
@@ -76,6 +80,7 @@
                 </span>
               </a>
             </div>
+            -->
           </div>
         </div>
       </div>
@@ -85,21 +90,24 @@
 
 </section>
 <!-- home end -->
-<mzk-intro-press></mzk-intro-press>
+<intro-business-idea></intro-business-idea>
+
+<mzk-intro-business></mzk-intro-business>
 
 <mzk-intro-ecosystem></mzk-intro-ecosystem>
 
-<mzk-intro-mzk-coins></mzk-intro-mzk-coins>
-
-<mzk-intro-business></mzk-intro-business>
+<intro-token-metrics></intro-token-metrics>
 
 <intro-leadership-team></intro-leadership-team>
 
 <intro-team></intro-team>
 
-<mzk-intro-investors></mzk-intro-investors>
-<mzk-intro-partners></mzk-intro-partners>
-
 <intro-advisors></intro-advisors>
 
+<mzk-intro-investors></mzk-intro-investors>
+
+<mzk-intro-partners></mzk-intro-partners>
+
 <intro-roadmap></intro-roadmap>
+
+<mzk-intro-press></mzk-intro-press>
