--- a/projects/intro/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.scss
+++ b/projects/intro/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.scss
@@ -9,14 +9,14 @@ h2 {
 
 .testimonial-client-img {
   img {
-    width: 130px;
-    height: 130px;
+    //width: 80px;
+    //height: 80px;
   }
 
   @media(max-width: 768px) {
     img {
-      width: 100px;
-      height: 100px;
+      //width: 100px;
+      //height: 100px;
       margin-top: 15px;
     }
   }
@@ -35,4 +35,14 @@ h6 {
   color: #5a6d86;
   font-size: 13px;
   line-height: 20px;
+}
+
+.profile-company-logo {
+  img {
+    height: 12px;
+  }
+}
+
+.profile-link {
+  color: #192538;
 }
