--- a/projects/intro/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/intro/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -5,11 +5,14 @@
       <div class="section-title-icon">
         <i class="pe-7s-micro text-custom"></i>
       </div>
-      <h2 class="intro-section-title"> TEAM LEADERSHIP </h2>
+      <h2 class="intro-section-title"> FOUNDERS </h2>
       <p class="mt-4 intro-section-subtitle">
         {{'intro-leadership.subtitle-1' | translate}}<BR />
         {{'intro-leadership.subtitle-2' | translate}}
       </p>
+
+      <br>
+      <img src="assets/intro-img/forbes.png" class="ml-3" height="80">
     </div>
     <BR />
     <BR />
@@ -22,7 +25,7 @@
                 <img [src]="leader.imagePath" class="img-fluid  rounded-circle img-thumbnail">
               </div>
             </div>
-            <div class="col-xs-6 pt-5 pl-4">
+            <div class="col-xs-6 pt-5 pl-3">
               <h6 class="mb-0 leader-name">
                 {{leader.name}}
                 <a class="fab fa-facebook" *ngIf="leader.facebook" [attr.href]="leader.facebook" target="_blank"></a>
@@ -34,7 +37,7 @@
               </div>
             </div>
           </div>
-          <ul class="pt-2" [ngClass]="currentLang">
+          <ul class="pt-2 leader-sentences" [ngClass]="currentLang">
             <li class="mt-1" *ngFor="let sentence of leader.sentences; let i =index;">
               {{sentence}}
             </li>
@@ -43,12 +46,12 @@
       </div>
     </div>
     <div class="clearfix"></div>
-    <p class="awards pt-5">
-      {{'intro-leadership.awards' | translate}}
-      <a href="https://www.forbes.com/30-under-30-asia/2018/#33f954aa5aeb" target="_blank">
-        <img src="assets/intro-img/forbes.png" class="ml-3" height="45">
-      </a>
-    </p>
+    <!--<p class="awards pt-5">-->
+      <!--{{'intro-leadership.awards' | translate}}-->
+      <!--<a href="https://www.forbes.com/30-under-30-asia/2018/#33f954aa5aeb" target="_blank">-->
+        <!--<img src="assets/intro-img/forbes.png" class="ml-3" height="45">-->
+      <!--</a>-->
+    <!--</p>-->
   </div>
 </section>
 <!-- LEADERSHIP TEAM end  -->
