feat(metrics): replace image when language is changed

--- a/projects/intro/src/modules/intro/components/intro-token-metrics/mzk-intro-token-metrics.component.html
+++ b/projects/intro/src/modules/intro/components/intro-token-metrics/mzk-intro-token-metrics.component.html
@@ -41,7 +41,12 @@
     </div>
 
     <div class="section-image mx-auto">
-      <img src="assets/intro-img/metrics/token-metrics.png">
+      <ng-container *ngIf="lang == 'zh'">
+        <img src="assets/intro-img/metrics/token-metrics-zh.png">
+      </ng-container>
+      <ng-container *ngIf="lang != 'zh'">
+        <img src="assets/intro-img/metrics/token-metrics.png">
+      </ng-container>
     </div>
   </div>
 </section>
