fix(intro): sync korean description with english ver. and add captions under the images in "Difference" section

--- a/projects/intro/src/modules/intro/components/intro-business-idea/mzk-intro-business-idea.component.html
+++ b/projects/intro/src/modules/intro/components/intro-business-idea/mzk-intro-business-idea.component.html
@@ -73,7 +73,11 @@
 
       <div class="row">
         <div class="col-md-6 col-xs-12 d-flex">
-          <img class="diff-img-1 align-self-center " src="assets/intro-img/business/diff-1.png">
+          <div class="diff-img-container align-self-center">
+            <img class="diff-img-1" src="assets/intro-img/business/diff-1.png">
+            <p class="diff-img-caption"
+               [innerHtml]="'intro-business-idea.different-1-image-caption' | translate | nl2br"></p>
+          </div>
         </div>
         <div class="col-md-6 col-xs-12">
           <h6>{{'intro-business-idea.different-1-short' | translate}}</h6>
@@ -83,7 +87,11 @@
 
       <div class="row">
         <div class="col-md-4 order-md-last col-xs-12 d-flex">
-          <img class="diff-img-2 align-self-center" src="assets/intro-img/business/diff-2.png">
+          <div class="diff-img-container align-self-center">
+            <img class="diff-img-2" src="assets/intro-img/business/diff-2.png">
+            <p class="diff-img-caption"
+               [innerHtml]="'intro-business-idea.different-2-image-caption' | translate | nl2br"></p>
+          </div>
         </div>
         <div class="col-md-8 order-md-first col-xs-12">
           <h6>{{'intro-business-idea.different-2-short' | translate}}</h6>
@@ -93,7 +101,11 @@
 
       <div class="row">
         <div class="col-md-7 col-xs-12 d-flex">
-          <img class="diff-img-3 align-self-center" src="assets/intro-img/business/diff-3.png">
+          <div class="diff-img-container align-self-center">
+            <img class="diff-img-3" src="assets/intro-img/business/diff-3.png">
+            <p class="diff-img-caption"
+               [innerHtml]="'intro-business-idea.different-3-image-caption' | translate | nl2br"></p>
+          </div>
         </div>
         <div class="col-md-5 col-xs-12">
           <h6>{{'intro-business-idea.different-3-short' | translate}}</h6>
