--- a/projects/intro/src/modules/intro/components/intro-business-idea/mzk-intro-business-idea.component.scss
+++ b/projects/intro/src/modules/intro/components/intro-business-idea/mzk-intro-business-idea.component.scss
@@ -102,27 +102,32 @@ ul.challenge-list {
   }
 }
 
+.diff-img-container {
+  width: 100%;
+
+  .diff-img-caption {
+    margin-top: 0.5em;
+    font-size: 0.8em;
+    text-align: center;
+  }
+}
+
 @media (min-width: 991px) {
+  .diff-img-1,
+  .diff-img-2,
+  .diff-img-3 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .diff-img-1, .diff-img-2 {
     display: block;
-    height: 202px;
-  }
-
-  .diff-img-1 {
-    margin-right: 20px;
-    margin-left: auto;
-  }
-
-  .diff-img-2 {
-    margin-left: 20px;
-    margin-right: auto;
+    height: 186px;
   }
 
   .diff-img-3 {
     width: 100%;
     display: block;
-    margin-right: 0;
-    margin-left: auto;
   }
 }
 
@@ -136,7 +141,7 @@ ul.challenge-list {
   .diff-img-1,
   .diff-img-2,
   .diff-img-3 {
-    margin-bottom: 30px;
+    display: block;
     margin-left: auto;
     margin-right: auto;
   }
@@ -149,6 +154,10 @@ ul.challenge-list {
 
   .diff-img-3 {
     width: 100%;
+  }
+
+  .diff-img-caption {
+    margin-bottom: 30px;
   }
 }
 
