feat(intro): create faq page

--- a/projects/intro/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/intro/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -80,6 +80,10 @@
           <a class="nav-link" href="#press">{{'intro-navbar.press' | translate}}</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/faq" target="_blank">{{'intro-navbar.faq' | translate}}</a>
+        </li>
+
         <li class="nav-item" dropdown>
           <a class="nav-link dropdown-toggle" dropdownToggle id="dropdownMenuButton" aria-haspopup="true"
              aria-expanded="false">
