fix(intro): change ui in faq page

--- a/projects/intro/src/modules/faq/component/qa/qa.component.html
+++ b/projects/intro/src/modules/faq/component/qa/qa.component.html
@@ -1,6 +1,4 @@
-<div class="question">
-  <h3>{{question}}</h3>
-</div>
+<h4>Q. {{question}}</h4>
 
 <div class="answer markdown-content"
      [innerHtml]="answer"></div>
