--- a/projects/intro/src/modules/faq/component/qa/qa.component.scss
+++ b/projects/intro/src/modules/faq/component/qa/qa.component.scss
@@ -1,11 +1,11 @@
 :host {
   display: block;
+  background-color: #ffffff;
+  padding: 20px;
+  border: 1px solid #dddddd;
 }
 
-h3 {
+h4 {
   color: #343c4d;
-}
-
-.question {
   margin-bottom: 24px;
 }
