--- a/projects/intro/src/modules/faq/page/main/main.component.html
+++ b/projects/intro/src/modules/faq/page/main/main.component.html
@@ -1,6 +1,6 @@
 <app-intro-navbar [stickOnTop]="true"></app-intro-navbar>
 
-<div class="container text-center">
+<div class="container text-center pb-0">
   <h2 class="intro-section-title"> FAQs </h2>
 </div>
 
