--- a/projects/intro/src/modules/faq/page/main/main.component.scss
+++ b/projects/intro/src/modules/faq/page/main/main.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  background-color: #fafbfc;
   padding-top: 50px; // navbar height
 }
 
@@ -12,5 +13,5 @@
 }
 
 mzk-faq-qa {
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
