feat(intro): add video clip about muzika

--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -64,7 +64,9 @@
           <div class="col-lg-6 p-sm-5">
             <div class="videoWrapper">
               <!-- Copy & Pasted from YouTube -->
-              <img src="assets/intro-img/video-thumbnail.jpg" width="530" height="315">
+              <iframe width="530" height="315"
+                      src="https://www.youtube.com/embed/EQl8d77KkOI"
+                      frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               <!--<iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0"-->
               <!--allowfullscreen></iframe>-->
             </div>
