fix(intro): add facebook link in the footer

--- a/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -24,6 +24,7 @@
           <li class="mb-2"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-en' | translate}}</a></li>
           <li class="mb-2"><a href="https://t.me/muzika_chinese"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-zh' | translate}}</a></li>
           <li class="mb-2"><a href="https://t.me/muzika_korean"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>
+          <li class="mb-2"><a href="https://www.facebook.com/muzikanews/"><i class="fab fa-facebook"></i> Facebook</a></li>
           <li class="mb-2"><a href="https://www.reddit.com/r/muzikaofficial/"><i class="fab fa-reddit"></i> Reddit</a></li>
           <li class="mb-2"><a href="https://github.com/MuzikaFoundation" target="_blank"><i class="fab fa-github"></i> Github</a></li>
         </ul>
