feat(intro): create muzika studio manual page (and pdf)

--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -59,6 +59,13 @@
                 <a [attr.href]="linuxDownloadURL"
                    target="_blank" class="download">Download</a>
               </div>
+              <div class="studio-manual mt-3">
+                <a routerLink="/manual" target="_blank">
+                  <i class="fa fa-lightbulb"></i> How to Use (Website)
+                </a>
+                or
+                <a href="assets/manual-en.pdf" target="_blank">PDF</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 p-sm-5">
