feat(popup): add listing popup

--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -1,5 +1,7 @@
 <intro-floating-btns></intro-floating-btns>
 
+<mzk-listing-popup></mzk-listing-popup>
+
 <!-- Home start -->
 <section class="section bg-home-full bg-home" id="home">
 
