--- a/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -21,11 +21,11 @@
         <ul class="mb-4 text-center">
           <li class="mb-2"><a href="https://medium.com/muzika-official" target="_blank"><i class="fab fa-medium"></i> {{'intro-footer.medium' | translate}}</a></li>
           <li class="mb-2"><a href="https://twitter.com/muzika_official" target="_blank"><i class="fab fa-twitter"></i> {{'intro-footer.twitter' | translate}}</a></li>
-          <li class="mb-2"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-en' | translate}}</a></li>
-          <li class="mb-2"><a href="https://t.me/muzika_chinese"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-zh' | translate}}</a></li>
-          <li class="mb-2"><a href="https://t.me/muzika_korean"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>
-          <li class="mb-2"><a href="https://www.facebook.com/muzikanews/"><i class="fab fa-facebook"></i> Facebook</a></li>
           <li class="mb-2"><a href="https://www.reddit.com/r/muzikaofficial/"><i class="fab fa-reddit"></i> Reddit</a></li>
+          <li class="mb-2" *ngIf="lang === 'en'"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-en' | translate}}</a></li>
+          <li class="mb-2" *ngIf="lang === 'zh'"><a href="https://t.me/muzika_chinese"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-zh' | translate}}</a></li>
+          <li class="mb-2" *ngIf="lang === 'ko'"><a href="https://t.me/muzika_korean"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>
+          <li class="mb-2"><a href="https://www.facebook.com/muzikanews/"><i class="fab fa-facebook"></i> Facebook</a></li>
           <li class="mb-2"><a href="https://github.com/MuzikaFoundation" target="_blank"><i class="fab fa-github"></i> Github</a></li>
         </ul>
       </div>
