--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -1,17 +1,14 @@
 <app-sound-navbar [stickOnTop]="true"></app-sound-navbar>
 
 <div id="sound-main" class="text-center pb-0">
-  <h1>
-    처음 만나는 음악 어플 <BR/>
-    무료는 시작일 뿐이다
-  </h1>
-  <h3> 지금 받으면 평생 무료 (기간 한정) </h3>
+  <h1>처음 만나는 음악 어플<BR/>무료는 시작일 뿐이다</h1>
+  <h3>지금 받으면 평생 무료 (기간 한정)</h3>
   <div class="app-button-group text-center">
     <a class="btn-download">
-      <img src="assets/sound/1_google.png" width="25" height="25"> Google Play
+      <img src="assets/sound/1_google.png"> Google Play
     </a>
     <a class="btn-download">
-      <img src="assets/sound/1_apple.png" width="25" height="25"> App Store
+      <img src="assets/sound/1_apple.png"> App Store
     </a>
   </div>
 </div>
@@ -27,7 +24,7 @@
         제대로 즐겨세요
       </h2>
       <h4>
-        뮤지카가 다른 음악 서비스들과 다른 5가지 이유가 무엇일까요? <BR/>
+        뮤지카에 주목해야 하는 이유 5가지를 소개합니다. <BR/>
         이 모든 것을 무료로 즐겨보세요.
       </h4>
       <img src="assets/sound/2_right.png" width="95%">
@@ -38,7 +35,7 @@
              [class.fa-angle-up]="openedQNA === 'copyright'"></i>
         </p>
         <p class="desc">
-          뮤지카는 한국저작권위원회를 통해 이용계약을 체결하고 저작권료를 정당하게 지불하고 있습니다. 웹사이트를 통해 저작권료 정산 및 지불 내역 또한 공개해드릴 예정입니다. 안심하고 음악을 즐기세요!
+          뮤지카는 한국저작권위원회를 통해 이용계약을 체결하고 저작권료를 정당하게 지불하고 있습니다. 안심하고 음악을 즐기세요!
         </p>
       </div>
       <div class="qna" [class.open]="openedQNA === 'why-free'" (click)="qnaClick('why-free')">
@@ -59,20 +56,20 @@
 <section id="artist-sponsor-section">
   <div class="container">
     <div class="row">
-      <div class="col-6 left">
+      <div class="col-12 col-sm-6 left">
         <h2>
           아티스트를 후원하는 <BR/>
           가장 똑똑한 방법
         </h2>
         <p>
-          내가 좋아하는 아티스트를 어떻게 후원해야할지 막막하셨나요?<BR/>
+          좋아하는 아티스트를 어떻게 후원해야할지 막막하셨나요?<BR/>
           클릭 한번으로 후원과 주간 인기 투표에 참여해보세요.
         </p>
       </div>
-      <div class="col-6 right">
-        <img src="assets/sound/3_step.png" width="70">
+      <div class="col-12 col-sm-6 right">
+        <img src="assets/sound/3_step.png">
         <div class="step-text">
-          <p> 케이크를 획득한다. </p>
+          <p> 케이크를 획득한다. <BR /> &nbsp; </p>
           <p>
             TOP 100 리스트에서 원하는 곡을 클릭하면, 후원과 동시에 투표 완료. <BR />
             (1 케이크 = 1 투표, 중복투표 가능)
@@ -96,11 +93,11 @@
     <h1>자주하는 질문 Q/A</h1>
     <div class="qna">
       <h3><span>Q</span> 케이크는 무엇인가요?</h3>
-      <p>케이크는 뮤지카 애플리케이션 내에서 아티스트 후원 등 다양한 활동에 사용할 수 있는 일종의 포인트입니다.</p>
+      <p>케이크는 뮤지카 앱 내에서 아티스트 후원 등 다양한 활동에 사용할 수 있는 일종의 포인트입니다.</p>
     </div>
     <div class="qna">
       <h3><span>Q</span> 케이크는 어떻게 얻나요?</h3>
-      <p>친구 추천 등 이벤트 참여와 뮤지카 내의 활동을 통해 획득하실 수 있으며, 애플리케이션 내부에서 별도 구매 또한 가능합니다.</p>
+      <p>친구 추천 등 이벤트 참여와 뮤지카 내의 활동을 통해 획득하실 수 있으며, 앱 내부에서 별도 구매 또한 가능합니다.</p>
     </div>
     <div class="qna">
       <h3><span>Q</span> 정말 아티스트들에게 후원되나요?</h3>
@@ -108,7 +105,7 @@
     </div>
     <div class="qna">
       <h3><span>Q</span> 남은 케이크는 어떻게 하나요?</h3>
-      <p>활동 보상으로 얻었거나, 사용하고 남은 케이크는 뮤지카 팀에게 판매하실 수 있습니다. 자세한 내용은 아래에서 확인해주세요.</p>
+      <p>걱정하지 마세요! 활동 보상으로 얻었거나, 사용하고 남은 케이크는 뮤지카 팀에게 다시 판매하실 수 있습니다. 자세한 내용은 아래에서 확인해주세요.</p>
     </div>
   </div>
 </section>
@@ -119,7 +116,7 @@
     <div class="label">에디터 선정</div>
 
     <h1>
-      뮤지카에서 새로운 음악 <BR />
+      뮤지카에서 새로운 음악과<BR />
       나만의 아티스트를 찾아드립니다
     </h1>
     <p>
@@ -140,7 +137,7 @@
       블록체인 실사용 어플리케이션입니다
     </h2>
     <p class="text-center">
-      케이크는 ERC-20 기반 암호화폐 MZK와 1:1 대응됩니다. 이용자가 앱에서 케이크 구매시, <BR />
+      케이크는 암호화폐 MZK와 1:1 대응됩니다. 이용자가 앱에서 케이크 구매시, <BR />
       뮤지카 팀에서 동일한 수량의 MZK를 거래소에서 구입합니다.
     </p>
 
