refactor(main): use new feature image

--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -127,7 +127,7 @@
 </section>
 
 <section id="features-section">
-  <img src="assets/sound/5_feature_section.jpg" width="100%">
+  <img src="assets/sound/5_feature.jpg" width="100%">
 </section>
 
 <section id="first-blockchain">
@@ -167,21 +167,21 @@
   </div>
 </section>
 
-<!--<section id="roadmap">-->
-  <!--<h2 class="text-center">-->
-    <!--블록체인 로드맵-->
-  <!--</h2>-->
-  <!--<p class="text-center">-->
-    <!--자세한 내용은 https://www.muzika.network 에서 확인해주세요.-->
-  <!--</p>-->
+<section id="roadmap">
+  <h2 class="text-center">
+    블록체인 로드맵
+  </h2>
+  <p class="text-center">
+    자세한 내용은 https://www.muzika.network 에서 확인해주세요.
+  </p>
 
-  <!--<div class="horizontal-line">-->
-    <!--<div class="active-line"></div>-->
-    <!--<div class="circle step-1"></div>-->
-    <!--<div class="circle step-2"></div>-->
-    <!--<div class="circle step-3"></div>-->
-  <!--</div>-->
-<!--</section>-->
+  <div class="horizontal-line">
+    <div class="active-line"></div>
+    <div class="circle step-1"></div>
+    <div class="circle step-2"></div>
+    <div class="circle step-3"></div>
+  </div>
+</section>
 
 <section class="text-center footer">
   Copyright 2018 Muzika Foundation. All right reserved
