--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -127,7 +127,8 @@
 </section>
 
 <section id="features-section">
-  <img src="assets/sound/5_feature.jpg" width="100%">
+  <img src="assets/sound/5_feature.jpg" class="pc" width="100%">
+  <img src="assets/sound/5_feature_mb.jpg" class="mobile" width="100%">
 </section>
 
 <section id="first-blockchain">
@@ -141,47 +142,47 @@
       뮤지카 팀에서 동일한 수량의 MZK를 거래소에서 구입합니다.
     </p>
 
-    <table>
-      <tr>
-        <td class="text-right">
-          <div class="circle cake-circle">
-            <img src="assets/sound/7_cake.png" width="60">
-          </div>
-        </td>
-        <td>
-          <div class="both-side-arrow"></div>
-        </td>
-        <td class="text-left">
-          <div class="circle mzk-circle">
-            MZK
-          </div>
-        </td>
-      </tr>
-      <tr class="name">
-        <td class="text-center">뮤지카 앱 케이크</td>
-        <td></td>
-        <td class="text-center">MZK 암호화폐</td>
-      </tr>
-    </table>
+    <!--<table>-->
+      <!--<tr>-->
+        <!--<td class="text-right">-->
+          <!--<div class="circle cake-circle">-->
+            <!--<img src="assets/sound/7_cake.png" width="60">-->
+          <!--</div>-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<div class="both-side-arrow"></div>-->
+        <!--</td>-->
+        <!--<td class="text-left">-->
+          <!--<div class="circle mzk-circle">-->
+            <!--MZK-->
+          <!--</div>-->
+        <!--</td>-->
+      <!--</tr>-->
+      <!--<tr class="name">-->
+        <!--<td class="text-center">뮤지카 앱 케이크</td>-->
+        <!--<td></td>-->
+        <!--<td class="text-center">MZK 암호화폐</td>-->
+      <!--</tr>-->
+    <!--</table>-->
 
   </div>
 </section>
 
-<section id="roadmap">
-  <h2 class="text-center">
-    블록체인 로드맵
-  </h2>
-  <p class="text-center">
-    자세한 내용은 https://www.muzika.network 에서 확인해주세요.
-  </p>
+<!--<section id="roadmap">-->
+  <!--<h2 class="text-center">-->
+    <!--블록체인 로드맵-->
+  <!--</h2>-->
+  <!--<p class="text-center">-->
+    <!--자세한 내용은 https://www.muzika.network 에서 확인해주세요.-->
+  <!--</p>-->
 
-  <div class="horizontal-line">
-    <div class="active-line"></div>
-    <div class="circle step-1"></div>
-    <div class="circle step-2"></div>
-    <div class="circle step-3"></div>
-  </div>
-</section>
+  <!--<div class="horizontal-line">-->
+    <!--<div class="active-line"></div>-->
+    <!--<div class="circle step-1"></div>-->
+    <!--<div class="circle step-2"></div>-->
+    <!--<div class="circle step-3"></div>-->
+  <!--</div>-->
+<!--</section>-->
 
 <section class="text-center footer">
   Copyright 2018 Muzika Foundation. All right reserved
