fix(main): typo fix

--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -21,7 +21,7 @@
     <div class="right">
       <h2>
         뮤지카와 함께 음악을 <BR/>
-        제대로 즐겨세요
+        제대로 즐겨보세요
       </h2>
       <h4>
         뮤지카에 주목해야 하는 이유 5가지를 소개합니다. <BR/>
